// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/Title should renders correctly with descriptionFont 1`] = `
<View
  style={
    {
      "marginBottom": 12,
      "marginTop": 18,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#444B5A",
          "fontFamily": "Inter-Medium",
          "fontSize": 24,
          "lineHeight": 30,
        },
        [
          {
            "paddingTop": 12,
            "textAlign": "center",
          },
          {
            "backgroundColor": "#000",
          },
        ],
      ]
    }
  >
    description text two
  </Text>
</View>
`;

exports[`@lad-tech/mobydick-core/Title should renders correctly with titleFont 1`] = `
<View
  style={
    {
      "marginBottom": 12,
      "marginTop": 18,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#444B5A",
          "fontFamily": "Inter-Medium",
          "fontSize": 24,
          "lineHeight": 30,
        },
        [
          {
            "textAlign": "center",
          },
          {
            "backgroundColor": "#000",
          },
        ],
      ]
    }
  >
    title two
  </Text>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        [
          {
            "paddingTop": 12,
            "textAlign": "center",
          },
          {
            "flex": 1,
          },
        ],
      ]
    }
  >
    descriptionText
  </Text>
</View>
`;

exports[`@lad-tech/mobydick-core/Title should renders correctly without descriptionFont 1`] = `
<View
  style={
    {
      "marginBottom": 12,
      "marginTop": 18,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#20242D",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 27,
          "lineHeight": 33,
        },
        [
          {
            "textAlign": "center",
          },
          {
            "flex": 1,
          },
        ],
      ]
    }
  >
    title
  </Text>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        [
          {
            "paddingTop": 12,
            "textAlign": "center",
          },
          {
            "flex": 1,
          },
        ],
      ]
    }
  >
    descriptionText
  </Text>
</View>
`;

exports[`@lad-tech/mobydick-core/Title should renders correctly without titleFont 1`] = `
<View
  style={
    {
      "marginBottom": 12,
      "marginTop": 18,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#20242D",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 27,
          "lineHeight": 33,
        },
        [
          {
            "textAlign": "center",
          },
          {
            "flex": 1,
          },
        ],
      ]
    }
  >
    title
  </Text>
</View>
`;
